# PhotoZipper

./: .gitignore  README.md  TECHNICAL_README.md  pyproject.toml  pytest.ini
photozipper/: __init__.py  __main__.py  cli.py  file_organizer.py  logger.py  models.py  pattern_matcher.py  zip_creator.py
tests/: conftest.py
tests/contract/: test_cli_arguments.py  test_cli_flags.py  test_cli_output.py
tests/integration/: test_basic_single_group.py  test_delete_originals.py  test_dry_run.py  test_error_handling.py  test_large_collections.py  test_merge_behavior.py  test_metadata_preservation.py  test_multiple_groups.py  test_no_matches.py  test_unicode_support.py
tests/unit/: test_file_organizer.py  test_logger.py  test_pattern_matcher.py  test_zip_creator.py
